chore: template working

--- a/notebooks/export_receipt.ipynb
+++ b/notebooks/export_receipt.ipynb
@@ -114,7 +114,7 @@
     "    .withColumn(\"max_fee_per_gas\", $\"max_fee_per_gas\".cast(sql.types.LongType))\n",
     "    .withColumn(\"max_priority_fee_per_gas\", $\"max_priority_fee_per_gas\".cast(sql.types.LongType))\n",
     "    .withColumn(\"transaction_type\", $\"transaction_type\".cast(sql.types.LongType))\n",
-    "    .sortWithinPartitions(\"block_number\", \"block_timestamp\", \"from_address\", \"to_address\", \"transaction_type\")\n",
+    "    .sortWithinPartitions(\"block_number\")\n",
     "    .writeTo(\"demo.bsc.transactions\")\n",
     "    .append()"
    ]
