change scale of reputation score to 10xe6

--- a/notebooks/reputation_calculation_pyspark_bsc.ipynb
+++ b/notebooks/reputation_calculation_pyspark_bsc.ipynb
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "id": "46d46f45",
    "metadata": {
     "scrolled": false
@@ -1171,28 +1171,28 @@
      "output_type": "stream",
      "text": [
       "+--------------------+------------------+\n",
-      "|             Address|  Reputation Score|\n",
+      "|             Address|Reputation (x10e6)|\n",
       "+--------------------+------------------+\n",
-      "|0x56e5272a583d3b4...|0.6083179071295053|\n",
-      "|0xb0dd17567933fc8...|1.6754423377397167|\n",
-      "|0xc8b9bbba82cbe9f...|0.6083179071295053|\n",
-      "|0xd576b5994865c94...|0.6083179071295053|\n",
-      "|0x1c537fcf80c1069...|0.6474210472661964|\n",
-      "|0x4e8f1cf9a9ddcad...|0.6083179071295053|\n",
-      "|0x54b4e4a37808b8d...|0.6083179071295053|\n",
-      "|0x555a56c3f71d8d1...|1.2765580580132696|\n",
-      "|0x67909f0fd4d7634...|0.6083179071295053|\n",
-      "|0xf764cc532f61789...|0.6083179071295053|\n",
-      "|0xfa97c22a03d8522...|0.8522184365084761|\n",
-      "|0x0cae1e6c5e8b410...|0.6083179071295053|\n",
-      "|0x2d356e9593fb9eb...|0.6083179071295053|\n",
-      "|0x322148a874461a5...|0.6083179071295053|\n",
-      "|0x45909c92c0c02f5...|0.5980480256199832|\n",
-      "|0x6daa86ef323e5a8...|0.6083179071295053|\n",
-      "|0x87882d214e91b2f...|1.1166587289064906|\n",
-      "|0x88540f24dfa6440...|0.6083179071295053|\n",
-      "|0x0225610b230e068...|0.6083179071295053|\n",
-      "|0x142ba743cf9317e...|0.6083179071295053|\n",
+      "|0xa8320c4d9a31c22...| 598048.0256199832|\n",
+      "|0x535fa6e1fc943c5...| 598048.0256199832|\n",
+      "|0x1b0a8331f882162...| 598048.0256199832|\n",
+      "|0x45909c92c0c02f5...| 598048.0256199832|\n",
+      "|0x55af73d6a08b65b...| 598048.0256199832|\n",
+      "|0x9ce943654f4f830...| 598048.0256199832|\n",
+      "|0x2a7cdd959bfe8d9...| 598048.0256199832|\n",
+      "|0xa38035a7823d4c4...| 598048.0256199832|\n",
+      "|0x5a1429be8689955...| 598048.0256199832|\n",
+      "|0xac7f34cd35ef90e...| 598048.0256199832|\n",
+      "|0x42d8cabf386d9da...| 598048.0256199832|\n",
+      "|0xdf0c9d433259b70...| 598048.0256199832|\n",
+      "|0x6bbad7cf34b5fa5...| 598048.0256199832|\n",
+      "|0x6fdfba9ae730ce6...| 598048.0256199832|\n",
+      "|0x7b5a26f31f3b409...| 598048.0256199832|\n",
+      "|0x64e714344780b12...| 598048.0256199832|\n",
+      "|0x880542e7235e529...| 598048.0256199832|\n",
+      "|0xdf0a82ff5638d9c...| 598048.0256199832|\n",
+      "|0x36170af0f313e8b...| 598048.0256199832|\n",
+      "|0x23f1abf4bc9cc1b...| 598048.0256199832|\n",
       "+--------------------+------------------+\n",
       "only showing top 20 rows"
      ]
@@ -1200,6 +1200,9 @@
    ],
    "source": [
     "result_df=results.vertices.select(\"id\", \"pagerank\").toDF(\"Address\", \"Reputation Score\")\n",
+    "result_df=result_df.withColumn('Reputation (x10e6)',(col('Reputation Score') * 1000000.0))\n",
+    "result_df=result_df.drop(col('Reputation Score'))\n",
+    "result_df=result_df.sort(col(\"Reputation (x10e6)\"))\n",
     "result_df.show()#truncate=False)"
    ]
   },
