change output headers

--- a/notebooks/reputation_calculation_pyspark_bsc.ipynb
+++ b/notebooks/reputation_calculation_pyspark_bsc.ipynb
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 248,
    "id": "95a8d09a",
    "metadata": {},
    "outputs": [
@@ -961,7 +961,7 @@
    "source": [
     "# calcualte totall gas, total transfer, total receive\n",
     "\n",
-    "total_gas_used_df = data_df.groupBy('from_address').agg(_sum('gas_used (bnb)').alias('Total gas'))\n",
+    "total_gas_used_df = data_df.groupBy('from_address').agg(_sum('gas_used (bnb)').alias('Total Gas Spent (BNB)'))\n",
     "total_gas_used_df=total_gas_used_df.withColumnRenamed('from_address', 'Address')\n",
     "\n",
     "total_transfer_df = data_df.groupBy('from_address').count().withColumnRenamed('count', 'Total Transfers')\n",
@@ -1179,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "ee1693df",
+   "id": "791e9025",
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0462a8d5",
+   "id": "35bada1e",
    "metadata": {},
    "source": [
     "#### normalize the score "
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "d6f6d9dc",
+   "id": "6939ce3e",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "ee1b4cd5",
+   "id": "1b71fc15",
    "metadata": {
     "scrolled": true
    },
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ffca819",
+   "id": "33bb241c",
    "metadata": {},
    "source": [
     "#### scale the score to 10xe6"
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "25774929",
+   "id": "15564a7e",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d26a4f7d",
+   "id": "89499e3c",
    "metadata": {},
    "source": [
     "#### calculate in , out degree"
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 246,
    "id": "5facc6ab",
    "metadata": {},
    "outputs": [
@@ -1406,8 +1406,10 @@
    "source": [
     "in_degrees = graph.inDegrees\n",
     "in_degrees = in_degrees.withColumnRenamed('id', 'Address')\n",
+    "in_degrees = in_degrees.withColumnRenamed('inDegree', 'In Degree')\n",
     "out_degrees = graph.outDegrees\n",
-    "out_degrees = out_degrees.withColumnRenamed('id', 'Address')"
+    "out_degrees = out_degrees.withColumnRenamed('id', 'Address')\n",
+    "out_degrees = out_degrees.withColumnRenamed('outDegree', 'Out Degree')"
    ]
   },
   {
@@ -1420,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 249,
    "id": "9edd8e3c",
    "metadata": {},
    "outputs": [
@@ -1442,30 +1444,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+------------------+------------+---------------+--------------+--------+---------+------------+\n",
-      "|             Address|Reputation (x10e6)|   Total gas|Total Transfers|Total Receives|inDegree|outDegree|total_degree|\n",
-      "+--------------------+------------------+------------+---------------+--------------+--------+---------+------------+\n",
-      "|0x75ca8f6c82df5fd...| 53313.22845002258|         0.0|              0|          1942|    1942|        0|           0|\n",
-      "|0xe4ae305ebe1abe6...| 43681.98293329425|         0.0|              0|           790|     790|        0|           0|\n",
-      "|0xae9269f27437f0f...| 34748.37597812844|         0.0|              0|          1567|    1567|        0|           0|\n",
-      "|0x55d398326f99059...|26884.650063964473|         0.0|              0|          1137|    1137|        0|           0|\n",
-      "|0xe9e7cea3dedca59...|15530.089348511083|         0.0|              0|           698|     698|        0|           0|\n",
-      "|0x007ea5c0ea75a8d...|12983.963025906942|         0.0|              0|           263|     263|        0|           0|\n",
-      "|0xcd7c5025753a49f...|12634.689168976656|         0.0|              0|           251|     251|        0|           0|\n",
-      "|0x66eee567831a0c2...|10807.634881426367|         0.0|              0|           105|     105|        0|           0|\n",
-      "|0x082e27ae683a4ba...|10118.002839054378|         0.0|              0|           578|     578|        0|           0|\n",
-      "|0x479a6f568082947...| 8061.739254900576|         0.0|              0|           497|     497|        0|           0|\n",
-      "|0x631fc1ea2270e98...|6895.0081334533215|1.2971484E18|           2810|            66|      66|     2810|        2876|\n",
-      "|0x9154c2684aef8d1...|  6221.96613692477|         0.0|              0|           470|     470|        0|           0|\n",
-      "|0x87aab9baf624aa1...|5962.8743067248215|         0.0|              0|           376|     376|        0|           0|\n",
-      "|0x000000000000000...| 5440.880164211681|         0.0|              0|           104|     104|        0|           0|\n",
-      "|0xd23b064910a11c1...| 5343.923111404032|         0.0|              0|           269|     269|        0|           0|\n",
-      "|0x2170ed0880ac9a7...| 4568.717466678904|         0.0|              0|           202|     202|        0|           0|\n",
-      "|0xbb4cdb9cbd36b01...| 3200.155704610937|         0.0|              0|           157|     157|        0|           0|\n",
-      "|0x0974202095999e5...|3153.9039572813567|         0.0|              0|           156|     156|        0|           0|\n",
-      "|0x589de0f0ccf9054...| 2956.309043761359|         0.0|              0|            77|      77|        0|           0|\n",
-      "|0x1ffe17b99b439be...|  2883.91184843899|         0.0|              0|            67|      67|        0|           0|\n",
-      "+--------------------+------------------+------------+---------------+--------------+--------+---------+------------+\n",
+      "+--------------------+------------------+---------------------+---------------+--------------+---------+----------+------+\n",
+      "|             Address|Reputation (x10e6)|Total Gas Spent (BNB)|Total Transfers|Total Receives|In Degree|Out Degree|Degree|\n",
+      "+--------------------+------------------+---------------------+---------------+--------------+---------+----------+------+\n",
+      "|0x75ca8f6c82df5fd...| 53313.22845002258|                  0.0|              0|          1942|     1942|         0|     0|\n",
+      "|0xe4ae305ebe1abe6...| 43681.98293329425|                  0.0|              0|           790|      790|         0|     0|\n",
+      "|0xae9269f27437f0f...| 34748.37597812844|                  0.0|              0|          1567|     1567|         0|     0|\n",
+      "|0x55d398326f99059...|26884.650063964473|                  0.0|              0|          1137|     1137|         0|     0|\n",
+      "|0xe9e7cea3dedca59...|15530.089348511083|                  0.0|              0|           698|      698|         0|     0|\n",
+      "|0x007ea5c0ea75a8d...|12983.963025906942|                  0.0|              0|           263|      263|         0|     0|\n",
+      "|0xcd7c5025753a49f...|12634.689168976656|                  0.0|              0|           251|      251|         0|     0|\n",
+      "|0x66eee567831a0c2...|10807.634881426367|                  0.0|              0|           105|      105|         0|     0|\n",
+      "|0x082e27ae683a4ba...|10118.002839054378|                  0.0|              0|           578|      578|         0|     0|\n",
+      "|0x479a6f568082947...| 8061.739254900576|                  0.0|              0|           497|      497|         0|     0|\n",
+      "|0x631fc1ea2270e98...|6895.0081334533215|         1.2971484E18|           2810|            66|       66|      2810|  2876|\n",
+      "|0x9154c2684aef8d1...|  6221.96613692477|                  0.0|              0|           470|      470|         0|     0|\n",
+      "|0x87aab9baf624aa1...|5962.8743067248215|                  0.0|              0|           376|      376|         0|     0|\n",
+      "|0x000000000000000...| 5440.880164211681|                  0.0|              0|           104|      104|         0|     0|\n",
+      "|0xd23b064910a11c1...| 5343.923111404032|                  0.0|              0|           269|      269|         0|     0|\n",
+      "|0x2170ed0880ac9a7...| 4568.717466678904|                  0.0|              0|           202|      202|         0|     0|\n",
+      "|0xbb4cdb9cbd36b01...| 3200.155704610937|                  0.0|              0|           157|      157|         0|     0|\n",
+      "|0x0974202095999e5...|3153.9039572813567|                  0.0|              0|           156|      156|         0|     0|\n",
+      "|0x589de0f0ccf9054...| 2956.309043761359|                  0.0|              0|            77|       77|         0|     0|\n",
+      "|0x1ffe17b99b439be...|  2883.91184843899|                  0.0|              0|            67|       67|         0|     0|\n",
+      "+--------------------+------------------+---------------------+---------------+--------------+---------+----------+------+\n",
       "only showing top 20 rows"
      ]
     }
@@ -1475,7 +1477,7 @@
     "merged_df = merged_df.join(total_transfer_df, 'Address', 'left')\n",
     "merged_df = merged_df.join(total_receive_df, 'Address', 'left')\n",
     "merged_df = merged_df.join(in_degrees, on='Address', how='left').join(out_degrees, on='Address', how='left')\n",
-    "merged_df = merged_df.withColumn('total_degree', merged_df['inDegree'] + merged_df['outDegree'])\n",
+    "merged_df = merged_df.withColumn('Degree', merged_df['In Degree'] + merged_df['Out Degree'])\n",
     "merged_df = merged_df.fillna(0)\n",
     "merged_df = merged_df.replace(float('-inf'), 0)\n",
     "merged_df=merged_df.sort(col(\"Reputation (x10e6)\"),ascending=False)\n",
@@ -1493,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8456a11",
+   "id": "6fdf4964",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1501,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c9236de",
+   "id": "67bf421a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1509,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "212de1d7",
+   "id": "d1655cd8",
    "metadata": {},
    "outputs": [],
    "source": []
