--- a/notebooks/reputation_calculation_graphscope_ver_bttc.ipynb
+++ b/notebooks/reputation_calculation_graphscope_ver_bttc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "87a04d68",
    "metadata": {},
    "outputs": [],
@@ -13,11 +13,20 @@
     "import numpy as np\n",
     "from sklearn import preprocessing\n",
     "min_max_scaler = preprocessing.MinMaxScaler()\n",
-    "import networkx as nx # network\n",
     "from tqdm import tqdm\n",
     "from scipy.stats import kendalltau\n",
-    "import os\n",
-    "import graphscope.nx as nx"
+    "import os\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3d3d6ed6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import networkx as nx\n",
+    "import graphscope.nx as nx # To use graphscope for calculating pagerank, only need to do replace \"nx\""
    ]
   },
   {
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "84b8081c",
    "metadata": {},
    "outputs": [
@@ -45,8 +54,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16.8 s, sys: 3.47 s, total: 20.3 s\n",
-      "Wall time: 38.1 s\n"
+      "CPU times: user 16.8 s, sys: 1.83 s, total: 18.6 s\n",
+      "Wall time: 20.2 s\n"
      ]
     }
    ],
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "8ecdb8ac",
    "metadata": {},
    "outputs": [
@@ -450,7 +459,7 @@
        "19  NaN   NaN   NaN            NaN            NaN  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "6c20ae56",
    "metadata": {},
    "outputs": [
@@ -469,8 +478,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 98.2 ms, sys: 285 ms, total: 383 ms\n",
-      "Wall time: 69.4 ms\n"
+      "CPU times: user 73.4 ms, sys: 1.59 ms, total: 75 ms\n",
+      "Wall time: 31.4 ms\n"
      ]
     }
    ],
@@ -481,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "54f6958f",
    "metadata": {
     "scrolled": false
@@ -763,7 +772,7 @@
        "[7943370 rows x 11 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "a26944d2",
    "metadata": {},
    "outputs": [],
@@ -798,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "id": "2bbeee20",
    "metadata": {},
    "outputs": [
@@ -811,8 +820,8 @@
       "for all txns with same address(from and to), only take the lastest one: 5342683 txns\n",
       "after remove nan in from_address 5342683\n",
       "after remove nan in to_address 5342679\n",
-      "CPU times: user 5.49 s, sys: 978 ms, total: 6.47 s\n",
-      "Wall time: 6.6 s\n"
+      "CPU times: user 5.46 s, sys: 486 ms, total: 5.94 s\n",
+      "Wall time: 5.95 s\n"
      ]
     }
    ],
@@ -845,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "id": "9a261fd2",
    "metadata": {},
    "outputs": [
@@ -869,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "492eb311",
    "metadata": {},
    "outputs": [
@@ -877,8 +886,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 117 ms, sys: 755 ms, total: 873 ms\n",
-      "Wall time: 134 ms\n"
+      "CPU times: user 129 ms, sys: 9.42 ms, total: 139 ms\n",
+      "Wall time: 33.9 ms\n"
      ]
     },
     {
@@ -1169,7 +1178,7 @@
        "[5342679 rows x 12 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "06831f56",
    "metadata": {},
    "outputs": [],
@@ -1213,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "5f4444c2",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "id": "d57db599",
    "metadata": {},
    "outputs": [],
@@ -1235,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "id": "05858352",
    "metadata": {
     "scrolled": true
@@ -1541,7 +1550,7 @@
        "[5342679 rows x 13 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "id": "58954ef3",
    "metadata": {},
    "outputs": [],
@@ -1576,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "id": "da7d72c3",
    "metadata": {},
    "outputs": [
@@ -1605,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "id": "98e544a6",
    "metadata": {},
    "outputs": [
@@ -1613,8 +1622,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.21 s, sys: 515 ms, total: 3.72 s\n",
-      "Wall time: 17.9 s\n"
+      "CPU times: user 64.1 ms, sys: 20.6 ms, total: 84.7 ms\n",
+      "Wall time: 4.89 s\n"
      ]
     }
    ],
@@ -1625,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "id": "41d1a48e",
    "metadata": {},
    "outputs": [
@@ -1633,8 +1642,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.8 s, sys: 670 ms, total: 18.4 s\n",
-      "Wall time: 18.5 s\n"
+      "CPU times: user 17.1 s, sys: 662 ms, total: 17.8 s\n",
+      "Wall time: 17.8 s\n"
      ]
     }
    ],
@@ -1646,26 +1655,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ab8f0520",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 2756187 nodes and 5342679\n",
+      "CPU times: user 2.94 s, sys: 3.02 s, total: 5.96 s\n",
+      "Wall time: 12min 43s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "print('total',G.number_of_nodes(),'nodes and',G.number_of_edges())"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "104c0877",
    "metadata": {},
    "source": [
-    "## Personalize weight"
+    "### Personalize weight"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "id": "7a5770e5",
    "metadata": {},
    "outputs": [],
@@ -1687,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ddb9511f",
    "metadata": {},
    "outputs": [
@@ -1729,12 +1749,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "id": "2488ca56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 26.5 s, sys: 962 ms, total: 27.5 s\n",
+      "Wall time: 45.6 s\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "%%time\n",
     "pr = nx.pagerank(G,\n",
     "                 alpha=0.5,\n",
     "                 personalization=personalized_weights,\n",
@@ -1752,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "id": "96dda631",
    "metadata": {},
    "outputs": [
@@ -2228,7 +2257,7 @@
        "29     2187       30  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2257,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "id": "dd2e92bd",
    "metadata": {},
    "outputs": [],
@@ -2266,16 +2295,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9b2e5f0b",
    "metadata": {},
    "source": [
-    "Compare w result by a Dung"
+    "#### Compare w result by a Dung"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "id": "71cb6b82",
    "metadata": {},
    "outputs": [
@@ -2283,8 +2313,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.51 s, sys: 1.51 s, total: 5.03 s\n",
-      "Wall time: 22.3 s\n"
+      "CPU times: user 3.57 s, sys: 1.16 s, total: 4.73 s\n",
+      "Wall time: 15.1 s\n"
      ]
     },
     {
@@ -3319,7 +3349,7 @@
        "38             1      2155       39  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3333,16 +3363,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c2767df2",
    "metadata": {},
    "source": [
-    "KTC for comparision"
+    "#### KTC for comparision w result by a Dung"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "id": "aa249d8e",
    "metadata": {},
    "outputs": [],
@@ -3358,7 +3389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "id": "e46cd792",
    "metadata": {},
    "outputs": [
@@ -3392,7 +3423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "id": "e25868d9",
    "metadata": {},
    "outputs": [
@@ -3407,8 +3438,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15.6 s, sys: 3.7 s, total: 19.3 s\n",
-      "Wall time: 58.7 s\n"
+      "CPU times: user 15.8 s, sys: 2.85 s, total: 18.6 s\n",
+      "Wall time: 45.3 s\n"
      ]
     }
    ],
@@ -3420,7 +3451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "id": "8b735b3e",
    "metadata": {},
    "outputs": [],
@@ -3432,7 +3463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 30,
    "id": "c0327c03",
    "metadata": {},
    "outputs": [
@@ -3539,7 +3570,7 @@
        "[1885706 rows x 2 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3552,7 +3583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "id": "a6f2abc6",
    "metadata": {},
    "outputs": [
@@ -3596,7 +3627,7 @@
        "1605295  0xd9eae009f7dd51e95ce93cf60dc5f78697c83f18  3108322911"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3607,7 +3638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 32,
    "id": "ea89125d",
    "metadata": {},
    "outputs": [
@@ -3714,7 +3745,7 @@
        "[1885706 rows x 2 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3727,7 +3758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 33,
    "id": "a41b6193",
    "metadata": {},
    "outputs": [
@@ -3834,7 +3865,7 @@
        "[2162666 rows x 2 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3847,7 +3878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 34,
    "id": "63ba549a",
    "metadata": {},
    "outputs": [
@@ -4101,7 +4132,7 @@
        "[2756187 rows x 11 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4117,7 +4148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 35,
    "id": "19630671",
    "metadata": {},
    "outputs": [],
@@ -4127,7 +4158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 36,
    "id": "79114585",
    "metadata": {},
    "outputs": [],
